--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 26
 
     defaultConfig {
         applicationId "cz.absolutno.sifry"
-        minSdkVersion 9
-        targetSdkVersion 23
+        minSdkVersion 14
+        targetSdkVersion 26
 
         compileOptions.with {
             sourceCompatibility JavaVersion.VERSION_1_7
@@ -37,5 +37,5 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:23.4.0'
+    implementation 'com.android.support:support-v4:26.1.0'
 }
