RegExp: return progress data in a sensible structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.4.1)
 
+set(CMAKE_CXX_STANDARD 14)
+
 add_library( regrep
              SHARED
              src/main/jni/regrep.cpp )
