--- a/spa2/src/main/AndroidManifest.xml
+++ b/spa2/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:versionCode="2303"
-    android:versionName="2.3.3">
+    android:versionCode="2304"
+    android:versionName="2.3.4">
 
     <application
         android:name="cz.absolutno.sifry.App"
@@ -41,6 +41,7 @@
         <activity
             android:name="cz.absolutno.sifry.common.activity.SettingsActivity"
             android:icon="@drawable/ic_menu_preferences"
+            android:theme="@style/MainTheme.FitSystemWindows"
             android:label="@string/tSettings" />
 
         <activity
